# safer_dynamic

./: Cargo.toml  Justfile
ccalc/: CMakeLists.txt
ccalc/src/: localmath.c  localmath.h  main.c
dynomath/: Cargo.toml
dynomath/include/: dynomath.h
dynomath/src/: lib.rs
rcalc/: Cargo.toml  build.rs
rcalc/src/: lib.rs  main.rs
