[package]
name = "dynomath"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
c-headers = ["safer-ffi/headers"]

[dependencies]
safer-ffi = "0.1.0-rc1"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["rustls-tls-native-roots"] }
